inline scrollbars in board view, fixed netAPI, upgraded babel

--- a/src/css/trelloBoard.scss
+++ b/src/css/trelloBoard.scss
@@ -75,6 +75,8 @@ body{
 
 .cardContainer{
     min-height: 10px;
+    overflow-y: auto;
+    max-height: calc(100vh - 165px);
 }
 
 .cardGhost{
